--- a/app/views/orders/show.html.erb
+++ b/app/views/orders/show.html.erb
@@ -1,25 +1,27 @@
-<p id="notice"><%= notice %></p>
+<%- model_class = Order -%>
+<div class="page-header">
+  <h1><%=t '.title', :default => model_class.model_name.human %></h1>
+</div>
 
-<p>
-  <b>Date:</b>
-  <%= @order.date %>
-</p>
+<dl class="dl-horizontal">
+  <dt><strong><%= model_class.human_attribute_name(:date) %>:</strong></dt>
+  <dd><%= @order.date %></dd>
+  <dt><strong><%= model_class.human_attribute_name(:product_id) %>:</strong></dt>
+  <dd><%= @order.product_id %></dd>
+  <dt><strong><%= model_class.human_attribute_name(:quantity) %>:</strong></dt>
+  <dd><%= @order.quantity %></dd>
+  <dt><strong><%= model_class.human_attribute_name(:cheque_id) %>:</strong></dt>
+  <dd><%= @order.cheque_id %></dd>
+</dl>
 
-<p>
-  <b>Product:</b>
-  <%= @order.product_id %>
-</p>
-
-<p>
-  <b>Quantity:</b>
-  <%= @order.quantity %>
-</p>
-
-<p>
-  <b>Cheque:</b>
-  <%= @order.cheque_id %>
-</p>
-
-
-<%= link_to 'Edit', edit_order_path(@order) %> |
-<%= link_to 'Back', orders_path %>
+<div class="form-actions">
+  <%= link_to t('.back', :default => t("helpers.links.back")),
+              orders_path, :class => 'btn'  %>
+  <%= link_to t('.edit', :default => t("helpers.links.edit")),
+              edit_order_path(@order), :class => 'btn' %>
+  <%= link_to t('.destroy', :default => t("helpers.links.destroy")),
+              order_path(@order),
+              :method => 'delete',
+              :data => { :confirm => t('.confirm', :default => t("helpers.links.confirm", :default => 'Are you sure?')) },
+              :class => 'btn btn-danger' %>
+</div>
