--- a/app/views/refunds/index.html.erb
+++ b/app/views/refunds/index.html.erb
@@ -1,27 +1,40 @@
-<h1>Listing refunds</h1>
-
-<table>
-  <tr>
-    <th>Transaction</th>
-    <th>Product transaction</th>
-    <th>Quantity</th>
-    <th></th>
-    <th></th>
-    <th></th>
-  </tr>
-
-<% @refunds.each do |refund| %>
-  <tr>
-    <td><%= refund.transaction_id %></td>
-    <td><%= refund.product_transaction_id %></td>
-    <td><%= refund.quantity %></td>
-    <td><%= link_to 'Show', refund %></td>
-    <td><%= link_to 'Edit', edit_refund_path(refund) %></td>
-    <td><%= link_to 'Destroy', refund, method: :delete, data: { confirm: 'Are you sure?' } %></td>
-  </tr>
-<% end %>
+<%- model_class = Refund -%>
+<div class="page-header">
+  <h1><%=t '.title', :default => model_class.model_name.human.pluralize %></h1>
+</div>
+<table class="table table-striped">
+  <thead>
+    <tr>
+      <th><%= model_class.human_attribute_name(:id) %></th>
+      <th><%= model_class.human_attribute_name(:transaction_id) %></th>
+      <th><%= model_class.human_attribute_name(:product_transaction_id) %></th>
+      <th><%= model_class.human_attribute_name(:quantity) %></th>
+      <th><%= model_class.human_attribute_name(:created_at) %></th>
+      <th><%=t '.actions', :default => t("helpers.actions") %></th>
+    </tr>
+  </thead>
+  <tbody>
+    <% @refunds.each do |refund| %>
+      <tr>
+        <td><%= link_to refund.id, refund_path(refund) %></td>
+        <td><%= refund.transaction_id %></td>
+        <td><%= refund.product_transaction_id %></td>
+        <td><%= refund.quantity %></td>
+        <td><%=l refund.created_at %></td>
+        <td>
+          <%= link_to t('.edit', :default => t("helpers.links.edit")),
+                      edit_refund_path(refund), :class => 'btn btn-mini' %>
+          <%= link_to t('.destroy', :default => t("helpers.links.destroy")),
+                      refund_path(refund),
+                      :method => :delete,
+                      :data => { :confirm => t('.confirm', :default => t("helpers.links.confirm", :default => 'Are you sure?')) },
+                      :class => 'btn btn-mini btn-danger' %>
+        </td>
+      </tr>
+    <% end %>
+  </tbody>
 </table>
 
-<br />
-
-<%= link_to 'New Refund', new_refund_path %>
+<%= link_to t('.new', :default => t("helpers.links.new")),
+            new_refund_path,
+            :class => 'btn btn-primary' %>
