--- a/app/views/bank_accounts/_form.html.erb
+++ b/app/views/bank_accounts/_form.html.erb
@@ -1,45 +1,50 @@
-<%= form_for(@bank_account) do |f| %>
-  <% if @bank_account.errors.any? %>
-    <div id="error_explanation">
-      <h2><%= pluralize(@bank_account.errors.count, "error") %> prohibited this bank_account from being saved:</h2>
-
-      <ul>
-      <% @bank_account.errors.full_messages.each do |msg| %>
-        <li><%= msg %></li>
-      <% end %>
-      </ul>
+<%= form_for @bank_account, :html => { :class => 'form-horizontal' } do |f| %>
+  <div class="control-group">
+    <%= f.label :bank_name, :class => 'control-label' %>
+    <div class="controls">
+      <%= f.text_field :bank_name, :class => 'text_field' %>
     </div>
-  <% end %>
+  </div>
+  <div class="control-group">
+    <%= f.label :account_number, :class => 'control-label' %>
+    <div class="controls">
+      <%= f.text_field :account_number, :class => 'text_field' %>
+    </div>
+  </div>
+  <div class="control-group">
+    <%= f.label :branch_add, :class => 'control-label' %>
+    <div class="controls">
+      <%= f.text_field :branch_add, :class => 'text_field' %>
+    </div>
+  </div>
+  <div class="control-group">
+    <%= f.label :ifsc_code, :class => 'control-label' %>
+    <div class="controls">
+      <%= f.number_field :ifsc_code, :class => 'number_field' %>
+    </div>
+  </div>
+  <div class="control-group">
+    <%= f.label :contact_number, :class => 'control-label' %>
+    <div class="controls">
+      <%= f.number_field :contact_number, :class => 'number_field' %>
+    </div>
+  </div>
+  <div class="control-group">
+    <%= f.label :branch_manager_contact_no, :class => 'control-label' %>
+    <div class="controls">
+      <%= f.number_field :branch_manager_contact_no, :class => 'number_field' %>
+    </div>
+  </div>
+  <div class="control-group">
+    <%= f.label :balance, :class => 'control-label' %>
+    <div class="controls">
+      <%= f.number_field :balance, :class => 'number_field' %>
+    </div>
+  </div>
 
-  <div class="field">
-    <%= f.label :bank_name %><br />
-    <%= f.text_field :bank_name %>
-  </div>
-  <div class="field">
-    <%= f.label :account_number %><br />
-    <%= f.text_field :account_number %>
-  </div>
-  <div class="field">
-    <%= f.label :branch_add %><br />
-    <%= f.text_field :branch_add %>
-  </div>
-  <div class="field">
-    <%= f.label :ifsc_code %><br />
-    <%= f.number_field :ifsc_code %>
-  </div>
-  <div class="field">
-    <%= f.label :contact_number %><br />
-    <%= f.number_field :contact_number %>
-  </div>
-  <div class="field">
-    <%= f.label :branch_manager_contact_no %><br />
-    <%= f.number_field :branch_manager_contact_no %>
-  </div>
-  <div class="field">
-    <%= f.label :balance %><br />
-    <%= f.number_field :balance %>
-  </div>
-  <div class="actions">
-    <%= f.submit %>
+  <div class="form-actions">
+    <%= f.submit nil, :class => 'btn btn-primary' %>
+    <%= link_to t('.cancel', :default => t("helpers.links.cancel")),
+                bank_accounts_path, :class => 'btn' %>
   </div>
 <% end %>
