--- a/app/views/bank_accounts/index.html.erb
+++ b/app/views/bank_accounts/index.html.erb
@@ -1,35 +1,48 @@
-<h1>Listing bank_accounts</h1>
-
-<table>
-  <tr>
-    <th>Bank name</th>
-    <th>Account number</th>
-    <th>Branch add</th>
-    <th>Ifsc code</th>
-    <th>Contact number</th>
-    <th>Branch manager contact no</th>
-    <th>Balance</th>
-    <th></th>
-    <th></th>
-    <th></th>
-  </tr>
-
-<% @bank_accounts.each do |bank_account| %>
-  <tr>
-    <td><%= bank_account.bank_name %></td>
-    <td><%= bank_account.account_number %></td>
-    <td><%= bank_account.branch_add %></td>
-    <td><%= bank_account.ifsc_code %></td>
-    <td><%= bank_account.contact_number %></td>
-    <td><%= bank_account.branch_manager_contact_no %></td>
-    <td><%= bank_account.balance %></td>
-    <td><%= link_to 'Show', bank_account %></td>
-    <td><%= link_to 'Edit', edit_bank_account_path(bank_account) %></td>
-    <td><%= link_to 'Destroy', bank_account, method: :delete, data: { confirm: 'Are you sure?' } %></td>
-  </tr>
-<% end %>
+<%- model_class = BankAccount -%>
+<div class="page-header">
+  <h1><%=t '.title', :default => model_class.model_name.human.pluralize %></h1>
+</div>
+<table class="table table-striped">
+  <thead>
+    <tr>
+      <th><%= model_class.human_attribute_name(:id) %></th>
+      <th><%= model_class.human_attribute_name(:bank_name) %></th>
+      <th><%= model_class.human_attribute_name(:account_number) %></th>
+      <th><%= model_class.human_attribute_name(:branch_add) %></th>
+      <th><%= model_class.human_attribute_name(:ifsc_code) %></th>
+      <th><%= model_class.human_attribute_name(:contact_number) %></th>
+      <th><%= model_class.human_attribute_name(:branch_manager_contact_no) %></th>
+      <th><%= model_class.human_attribute_name(:balance) %></th>
+      <th><%= model_class.human_attribute_name(:created_at) %></th>
+      <th><%=t '.actions', :default => t("helpers.actions") %></th>
+    </tr>
+  </thead>
+  <tbody>
+    <% @bank_accounts.each do |bank_account| %>
+      <tr>
+        <td><%= link_to bank_account.id, bank_account_path(bank_account) %></td>
+        <td><%= bank_account.bank_name %></td>
+        <td><%= bank_account.account_number %></td>
+        <td><%= bank_account.branch_add %></td>
+        <td><%= bank_account.ifsc_code %></td>
+        <td><%= bank_account.contact_number %></td>
+        <td><%= bank_account.branch_manager_contact_no %></td>
+        <td><%= bank_account.balance %></td>
+        <td><%=l bank_account.created_at %></td>
+        <td>
+          <%= link_to t('.edit', :default => t("helpers.links.edit")),
+                      edit_bank_account_path(bank_account), :class => 'btn btn-mini' %>
+          <%= link_to t('.destroy', :default => t("helpers.links.destroy")),
+                      bank_account_path(bank_account),
+                      :method => :delete,
+                      :data => { :confirm => t('.confirm', :default => t("helpers.links.confirm", :default => 'Are you sure?')) },
+                      :class => 'btn btn-mini btn-danger' %>
+        </td>
+      </tr>
+    <% end %>
+  </tbody>
 </table>
 
-<br />
-
-<%= link_to 'New Bank account', new_bank_account_path %>
+<%= link_to t('.new', :default => t("helpers.links.new")),
+            new_bank_account_path,
+            :class => 'btn btn-primary' %>
