--- a/app/views/bank_transactions/index.html.erb
+++ b/app/views/bank_transactions/index.html.erb
@@ -1,27 +1,40 @@
-<h1>Listing bank_transactions</h1>
-
-<table>
-  <tr>
-    <th>Type</th>
-    <th>Micor code</th>
-    <th>Bank account</th>
-    <th></th>
-    <th></th>
-    <th></th>
-  </tr>
-
-<% @bank_transactions.each do |bank_transaction| %>
-  <tr>
-    <td><%= bank_transaction.type %></td>
-    <td><%= bank_transaction.micor_code %></td>
-    <td><%= bank_transaction.bank_account_id %></td>
-    <td><%= link_to 'Show', bank_transaction %></td>
-    <td><%= link_to 'Edit', edit_bank_transaction_path(bank_transaction) %></td>
-    <td><%= link_to 'Destroy', bank_transaction, method: :delete, data: { confirm: 'Are you sure?' } %></td>
-  </tr>
-<% end %>
+<%- model_class = BankTransaction -%>
+<div class="page-header">
+  <h1><%=t '.title', :default => model_class.model_name.human.pluralize %></h1>
+</div>
+<table class="table table-striped">
+  <thead>
+    <tr>
+      <th><%= model_class.human_attribute_name(:id) %></th>
+      <th><%= model_class.human_attribute_name(:type) %></th>
+      <th><%= model_class.human_attribute_name(:micor_code) %></th>
+      <th><%= model_class.human_attribute_name(:bank_account_id) %></th>
+      <th><%= model_class.human_attribute_name(:created_at) %></th>
+      <th><%=t '.actions', :default => t("helpers.actions") %></th>
+    </tr>
+  </thead>
+  <tbody>
+    <% @bank_transactions.each do |bank_transaction| %>
+      <tr>
+        <td><%= link_to bank_transaction.id, bank_transaction_path(bank_transaction) %></td>
+        <td><%= bank_transaction.type %></td>
+        <td><%= bank_transaction.micor_code %></td>
+        <td><%= bank_transaction.bank_account_id %></td>
+        <td><%=l bank_transaction.created_at %></td>
+        <td>
+          <%= link_to t('.edit', :default => t("helpers.links.edit")),
+                      edit_bank_transaction_path(bank_transaction), :class => 'btn btn-mini' %>
+          <%= link_to t('.destroy', :default => t("helpers.links.destroy")),
+                      bank_transaction_path(bank_transaction),
+                      :method => :delete,
+                      :data => { :confirm => t('.confirm', :default => t("helpers.links.confirm", :default => 'Are you sure?')) },
+                      :class => 'btn btn-mini btn-danger' %>
+        </td>
+      </tr>
+    <% end %>
+  </tbody>
 </table>
 
-<br />
-
-<%= link_to 'New Bank transaction', new_bank_transaction_path %>
+<%= link_to t('.new', :default => t("helpers.links.new")),
+            new_bank_transaction_path,
+            :class => 'btn btn-primary' %>
