--- a/app/views/bank_transactions/show.html.erb
+++ b/app/views/bank_transactions/show.html.erb
@@ -1,20 +1,25 @@
-<p id="notice"><%= notice %></p>
+<%- model_class = BankTransaction -%>
+<div class="page-header">
+  <h1><%=t '.title', :default => model_class.model_name.human %></h1>
+</div>
 
-<p>
-  <b>Type:</b>
-  <%= @bank_transaction.type %>
-</p>
+<dl class="dl-horizontal">
+  <dt><strong><%= model_class.human_attribute_name(:type) %>:</strong></dt>
+  <dd><%= @bank_transaction.type %></dd>
+  <dt><strong><%= model_class.human_attribute_name(:micor_code) %>:</strong></dt>
+  <dd><%= @bank_transaction.micor_code %></dd>
+  <dt><strong><%= model_class.human_attribute_name(:bank_account_id) %>:</strong></dt>
+  <dd><%= @bank_transaction.bank_account_id %></dd>
+</dl>
 
-<p>
-  <b>Micor code:</b>
-  <%= @bank_transaction.micor_code %>
-</p>
-
-<p>
-  <b>Bank account:</b>
-  <%= @bank_transaction.bank_account_id %>
-</p>
-
-
-<%= link_to 'Edit', edit_bank_transaction_path(@bank_transaction) %> |
-<%= link_to 'Back', bank_transactions_path %>
+<div class="form-actions">
+  <%= link_to t('.back', :default => t("helpers.links.back")),
+              bank_transactions_path, :class => 'btn'  %>
+  <%= link_to t('.edit', :default => t("helpers.links.edit")),
+              edit_bank_transaction_path(@bank_transaction), :class => 'btn' %>
+  <%= link_to t('.destroy', :default => t("helpers.links.destroy")),
+              bank_transaction_path(@bank_transaction),
+              :method => 'delete',
+              :data => { :confirm => t('.confirm', :default => t("helpers.links.confirm", :default => 'Are you sure?')) },
+              :class => 'btn btn-danger' %>
+</div>
