--- a/app/views/product_transactions/edit.html.erb
+++ b/app/views/product_transactions/edit.html.erb
@@ -1,6 +1,6 @@
-<h1>Editing product_transaction</h1>
-
-<%= render 'form' %>
-
-<%= link_to 'Show', @product_transaction %> |
-<%= link_to 'Back', product_transactions_path %>
+<%- model_class = ProductTransaction -%>
+<div class="page-header">
+  <h1><%=t '.title', :default => t('helpers.titles.edit', :model => model_class.model_name.human,
+                                   :default => "Edit #{model_class.model_name.human}") %></h1>
+</div>
+<%= render :partial => 'form' %>
