--- a/app/views/products/_form.html.erb
+++ b/app/views/products/_form.html.erb
@@ -1,41 +1,44 @@
-<%= form_for(@product) do |f| %>
-  <% if @product.errors.any? %>
-    <div id="error_explanation">
-      <h2><%= pluralize(@product.errors.count, "error") %> prohibited this product from being saved:</h2>
-
-      <ul>
-      <% @product.errors.full_messages.each do |msg| %>
-        <li><%= msg %></li>
-      <% end %>
-      </ul>
+<%= form_for @product, :html => { :class => 'form-horizontal' } do |f| %>
+  <div class="control-group">
+    <%= f.label :product_number, :class => 'control-label' %>
+    <div class="controls">
+      <%= f.number_field :product_number, :class => 'number_field' %>
     </div>
-  <% end %>
+  </div>
+  <div class="control-group">
+    <%= f.label :product_code, :class => 'control-label' %>
+    <div class="controls">
+      <%= f.number_field :product_code, :class => 'number_field' %>
+    </div>
+  </div>
+  <div class="control-group">
+    <%= f.label :product_name, :class => 'control-label' %>
+    <div class="controls">
+      <%= f.text_field :product_name, :class => 'text_field' %>
+    </div>
+  </div>
+  <div class="control-group">
+    <%= f.label :product_type, :class => 'control-label' %>
+    <div class="controls">
+      <%= f.check_box :product_type, :class => 'check_box' %>
+    </div>
+  </div>
+  <div class="control-group">
+    <%= f.label :tax, :class => 'control-label' %>
+    <div class="controls">
+      <%= f.text_field :tax, :class => 'text_field' %>
+    </div>
+  </div>
+  <div class="control-group">
+    <%= f.label :rate, :class => 'control-label' %>
+    <div class="controls">
+      <%= f.text_field :rate, :class => 'text_field' %>
+    </div>
+  </div>
 
-  <div class="field">
-    <%= f.label :product_number %><br />
-    <%= f.number_field :product_number %>
-  </div>
-  <div class="field">
-    <%= f.label :product_code %><br />
-    <%= f.number_field :product_code %>
-  </div>
-  <div class="field">
-    <%= f.label :product_name %><br />
-    <%= f.text_field :product_name %>
-  </div>
-  <div class="field">
-    <%= f.label :product_type %><br />
-    <%= f.check_box :product_type %>
-  </div>
-  <div class="field">
-    <%= f.label :tax %><br />
-    <%= f.text_field :tax %>
-  </div>
-  <div class="field">
-    <%= f.label :rate %><br />
-    <%= f.text_field :rate %>
-  </div>
-  <div class="actions">
-    <%= f.submit %>
+  <div class="form-actions">
+    <%= f.submit nil, :class => 'btn btn-primary' %>
+    <%= link_to t('.cancel', :default => t("helpers.links.cancel")),
+                products_path, :class => 'btn' %>
   </div>
 <% end %>
