--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -1,35 +1,31 @@
-<p id="notice"><%= notice %></p>
+<%- model_class = Product -%>
+<div class="page-header">
+  <h1><%=t '.title', :default => model_class.model_name.human %></h1>
+</div>
 
-<p>
-  <b>Product number:</b>
-  <%= @product.product_number %>
-</p>
+<dl class="dl-horizontal">
+  <dt><strong><%= model_class.human_attribute_name(:product_number) %>:</strong></dt>
+  <dd><%= @product.product_number %></dd>
+  <dt><strong><%= model_class.human_attribute_name(:product_code) %>:</strong></dt>
+  <dd><%= @product.product_code %></dd>
+  <dt><strong><%= model_class.human_attribute_name(:product_name) %>:</strong></dt>
+  <dd><%= @product.product_name %></dd>
+  <dt><strong><%= model_class.human_attribute_name(:product_type) %>:</strong></dt>
+  <dd><%= @product.product_type %></dd>
+  <dt><strong><%= model_class.human_attribute_name(:tax) %>:</strong></dt>
+  <dd><%= @product.tax %></dd>
+  <dt><strong><%= model_class.human_attribute_name(:rate) %>:</strong></dt>
+  <dd><%= @product.rate %></dd>
+</dl>
 
-<p>
-  <b>Product code:</b>
-  <%= @product.product_code %>
-</p>
-
-<p>
-  <b>Product name:</b>
-  <%= @product.product_name %>
-</p>
-
-<p>
-  <b>Product type:</b>
-  <%= @product.product_type %>
-</p>
-
-<p>
-  <b>Tax:</b>
-  <%= @product.tax %>
-</p>
-
-<p>
-  <b>Rate:</b>
-  <%= @product.rate %>
-</p>
-
-
-<%= link_to 'Edit', edit_product_path(@product) %> |
-<%= link_to 'Back', products_path %>
+<div class="form-actions">
+  <%= link_to t('.back', :default => t("helpers.links.back")),
+              products_path, :class => 'btn'  %>
+  <%= link_to t('.edit', :default => t("helpers.links.edit")),
+              edit_product_path(@product), :class => 'btn' %>
+  <%= link_to t('.destroy', :default => t("helpers.links.destroy")),
+              product_path(@product),
+              :method => 'delete',
+              :data => { :confirm => t('.confirm', :default => t("helpers.links.confirm", :default => 'Are you sure?')) },
+              :class => 'btn btn-danger' %>
+</div>
