--- a/app/views/refunds/_form.html.erb
+++ b/app/views/refunds/_form.html.erb
@@ -1,29 +1,26 @@
-<%= form_for(@refund) do |f| %>
-  <% if @refund.errors.any? %>
-    <div id="error_explanation">
-      <h2><%= pluralize(@refund.errors.count, "error") %> prohibited this refund from being saved:</h2>
-
-      <ul>
-      <% @refund.errors.full_messages.each do |msg| %>
-        <li><%= msg %></li>
-      <% end %>
-      </ul>
+<%= form_for @refund, :html => { :class => 'form-horizontal' } do |f| %>
+  <div class="control-group">
+    <%= f.label :transaction_id, :class => 'control-label' %>
+    <div class="controls">
+      <%= f.number_field :transaction_id, :class => 'number_field' %>
     </div>
-  <% end %>
+  </div>
+  <div class="control-group">
+    <%= f.label :product_transaction_id, :class => 'control-label' %>
+    <div class="controls">
+      <%= f.number_field :product_transaction_id, :class => 'number_field' %>
+    </div>
+  </div>
+  <div class="control-group">
+    <%= f.label :quantity, :class => 'control-label' %>
+    <div class="controls">
+      <%= f.number_field :quantity, :class => 'number_field' %>
+    </div>
+  </div>
 
-  <div class="field">
-    <%= f.label :transaction_id %><br />
-    <%= f.number_field :transaction_id %>
-  </div>
-  <div class="field">
-    <%= f.label :product_transaction_id %><br />
-    <%= f.number_field :product_transaction_id %>
-  </div>
-  <div class="field">
-    <%= f.label :quantity %><br />
-    <%= f.number_field :quantity %>
-  </div>
-  <div class="actions">
-    <%= f.submit %>
+  <div class="form-actions">
+    <%= f.submit nil, :class => 'btn btn-primary' %>
+    <%= link_to t('.cancel', :default => t("helpers.links.cancel")),
+                refunds_path, :class => 'btn' %>
   </div>
 <% end %>
