--- a/app/views/refunds/show.html.erb
+++ b/app/views/refunds/show.html.erb
@@ -1,20 +1,25 @@
-<p id="notice"><%= notice %></p>
+<%- model_class = Refund -%>
+<div class="page-header">
+  <h1><%=t '.title', :default => model_class.model_name.human %></h1>
+</div>
 
-<p>
-  <b>Transaction:</b>
-  <%= @refund.transaction_id %>
-</p>
+<dl class="dl-horizontal">
+  <dt><strong><%= model_class.human_attribute_name(:transaction_id) %>:</strong></dt>
+  <dd><%= @refund.transaction_id %></dd>
+  <dt><strong><%= model_class.human_attribute_name(:product_transaction_id) %>:</strong></dt>
+  <dd><%= @refund.product_transaction_id %></dd>
+  <dt><strong><%= model_class.human_attribute_name(:quantity) %>:</strong></dt>
+  <dd><%= @refund.quantity %></dd>
+</dl>
 
-<p>
-  <b>Product transaction:</b>
-  <%= @refund.product_transaction_id %>
-</p>
-
-<p>
-  <b>Quantity:</b>
-  <%= @refund.quantity %>
-</p>
-
-
-<%= link_to 'Edit', edit_refund_path(@refund) %> |
-<%= link_to 'Back', refunds_path %>
+<div class="form-actions">
+  <%= link_to t('.back', :default => t("helpers.links.back")),
+              refunds_path, :class => 'btn'  %>
+  <%= link_to t('.edit', :default => t("helpers.links.edit")),
+              edit_refund_path(@refund), :class => 'btn' %>
+  <%= link_to t('.destroy', :default => t("helpers.links.destroy")),
+              refund_path(@refund),
+              :method => 'delete',
+              :data => { :confirm => t('.confirm', :default => t("helpers.links.confirm", :default => 'Are you sure?')) },
+              :class => 'btn btn-danger' %>
+</div>
