--- a/app/views/tax_invoices/_form.html.erb
+++ b/app/views/tax_invoices/_form.html.erb
@@ -1,49 +1,56 @@
-<%= form_for(@tax_invoice) do |f| %>
-  <% if @tax_invoice.errors.any? %>
-    <div id="error_explanation">
-      <h2><%= pluralize(@tax_invoice.errors.count, "error") %> prohibited this tax_invoice from being saved:</h2>
-
-      <ul>
-      <% @tax_invoice.errors.full_messages.each do |msg| %>
-        <li><%= msg %></li>
-      <% end %>
-      </ul>
+<%= form_for @tax_invoice, :html => { :class => 'form-horizontal' } do |f| %>
+  <div class="control-group">
+    <%= f.label :invoice_number, :class => 'control-label' %>
+    <div class="controls">
+      <%= f.number_field :invoice_number, :class => 'number_field' %>
     </div>
-  <% end %>
+  </div>
+  <div class="control-group">
+    <%= f.label :invoice_date, :class => 'control-label' %>
+    <div class="controls">
+      <%= f.datetime_select :invoice_date, :class => 'datetime_select' %>
+    </div>
+  </div>
+  <div class="control-group">
+    <%= f.label :due_date, :class => 'control-label' %>
+    <div class="controls">
+      <%= f.datetime_select :due_date, :class => 'datetime_select' %>
+    </div>
+  </div>
+  <div class="control-group">
+    <%= f.label :product_name, :class => 'control-label' %>
+    <div class="controls">
+      <%= f.text_field :product_name, :class => 'text_field' %>
+    </div>
+  </div>
+  <div class="control-group">
+    <%= f.label :invoice_type, :class => 'control-label' %>
+    <div class="controls">
+      <%= f.text_field :invoice_type, :class => 'text_field' %>
+    </div>
+  </div>
+  <div class="control-group">
+    <%= f.label :labour_charges, :class => 'control-label' %>
+    <div class="controls">
+      <%= f.text_field :labour_charges, :class => 'text_field' %>
+    </div>
+  </div>
+  <div class="control-group">
+    <%= f.label :amount, :class => 'control-label' %>
+    <div class="controls">
+      <%= f.text_field :amount, :class => 'text_field' %>
+    </div>
+  </div>
+  <div class="control-group">
+    <%= f.label :total_requirement, :class => 'control-label' %>
+    <div class="controls">
+      <%= f.number_field :total_requirement, :class => 'number_field' %>
+    </div>
+  </div>
 
-  <div class="field">
-    <%= f.label :invoice_number %><br />
-    <%= f.number_field :invoice_number %>
-  </div>
-  <div class="field">
-    <%= f.label :invoice_date %><br />
-    <%= f.datetime_select :invoice_date %>
-  </div>
-  <div class="field">
-    <%= f.label :due_date %><br />
-    <%= f.datetime_select :due_date %>
-  </div>
-  <div class="field">
-    <%= f.label :product_name %><br />
-    <%= f.text_field :product_name %>
-  </div>
-  <div class="field">
-    <%= f.label :invoice_type %><br />
-    <%= f.text_field :invoice_type %>
-  </div>
-  <div class="field">
-    <%= f.label :labour_charges %><br />
-    <%= f.text_field :labour_charges %>
-  </div>
-  <div class="field">
-    <%= f.label :amount %><br />
-    <%= f.text_field :amount %>
-  </div>
-  <div class="field">
-    <%= f.label :total_requirement %><br />
-    <%= f.number_field :total_requirement %>
-  </div>
-  <div class="actions">
-    <%= f.submit %>
+  <div class="form-actions">
+    <%= f.submit nil, :class => 'btn btn-primary' %>
+    <%= link_to t('.cancel', :default => t("helpers.links.cancel")),
+                tax_invoices_path, :class => 'btn' %>
   </div>
 <% end %>
