--- a/app/views/transactions/index.html.erb
+++ b/app/views/transactions/index.html.erb
@@ -1,29 +1,42 @@
-<h1>Listing transactions</h1>
-
-<table>
-  <tr>
-    <th>Bank transaction</th>
-    <th>Total</th>
-    <th>Total refund</th>
-    <th>Product transaction</th>
-    <th></th>
-    <th></th>
-    <th></th>
-  </tr>
-
-<% @transactions.each do |transaction| %>
-  <tr>
-    <td><%= transaction.bank_transaction_id %></td>
-    <td><%= transaction.total %></td>
-    <td><%= transaction.total_refund %></td>
-    <td><%= transaction.product_transaction_id %></td>
-    <td><%= link_to 'Show', transaction %></td>
-    <td><%= link_to 'Edit', edit_transaction_path(transaction) %></td>
-    <td><%= link_to 'Destroy', transaction, method: :delete, data: { confirm: 'Are you sure?' } %></td>
-  </tr>
-<% end %>
+<%- model_class = Transaction -%>
+<div class="page-header">
+  <h1><%=t '.title', :default => model_class.model_name.human.pluralize %></h1>
+</div>
+<table class="table table-striped">
+  <thead>
+    <tr>
+      <th><%= model_class.human_attribute_name(:id) %></th>
+      <th><%= model_class.human_attribute_name(:bank_transaction_id) %></th>
+      <th><%= model_class.human_attribute_name(:total) %></th>
+      <th><%= model_class.human_attribute_name(:total_refund) %></th>
+      <th><%= model_class.human_attribute_name(:product_transaction_id) %></th>
+      <th><%= model_class.human_attribute_name(:created_at) %></th>
+      <th><%=t '.actions', :default => t("helpers.actions") %></th>
+    </tr>
+  </thead>
+  <tbody>
+    <% @transactions.each do |transaction| %>
+      <tr>
+        <td><%= link_to transaction.id, transaction_path(transaction) %></td>
+        <td><%= transaction.bank_transaction_id %></td>
+        <td><%= transaction.total %></td>
+        <td><%= transaction.total_refund %></td>
+        <td><%= transaction.product_transaction_id %></td>
+        <td><%=l transaction.created_at %></td>
+        <td>
+          <%= link_to t('.edit', :default => t("helpers.links.edit")),
+                      edit_transaction_path(transaction), :class => 'btn btn-mini' %>
+          <%= link_to t('.destroy', :default => t("helpers.links.destroy")),
+                      transaction_path(transaction),
+                      :method => :delete,
+                      :data => { :confirm => t('.confirm', :default => t("helpers.links.confirm", :default => 'Are you sure?')) },
+                      :class => 'btn btn-mini btn-danger' %>
+        </td>
+      </tr>
+    <% end %>
+  </tbody>
 </table>
 
-<br />
-
-<%= link_to 'New Transaction', new_transaction_path %>
+<%= link_to t('.new', :default => t("helpers.links.new")),
+            new_transaction_path,
+            :class => 'btn btn-primary' %>
