--- a/app/views/transactions/show.html.erb
+++ b/app/views/transactions/show.html.erb
@@ -1,25 +1,27 @@
-<p id="notice"><%= notice %></p>
+<%- model_class = Transaction -%>
+<div class="page-header">
+  <h1><%=t '.title', :default => model_class.model_name.human %></h1>
+</div>
 
-<p>
-  <b>Bank transaction:</b>
-  <%= @transaction.bank_transaction_id %>
-</p>
+<dl class="dl-horizontal">
+  <dt><strong><%= model_class.human_attribute_name(:bank_transaction_id) %>:</strong></dt>
+  <dd><%= @transaction.bank_transaction_id %></dd>
+  <dt><strong><%= model_class.human_attribute_name(:total) %>:</strong></dt>
+  <dd><%= @transaction.total %></dd>
+  <dt><strong><%= model_class.human_attribute_name(:total_refund) %>:</strong></dt>
+  <dd><%= @transaction.total_refund %></dd>
+  <dt><strong><%= model_class.human_attribute_name(:product_transaction_id) %>:</strong></dt>
+  <dd><%= @transaction.product_transaction_id %></dd>
+</dl>
 
-<p>
-  <b>Total:</b>
-  <%= @transaction.total %>
-</p>
-
-<p>
-  <b>Total refund:</b>
-  <%= @transaction.total_refund %>
-</p>
-
-<p>
-  <b>Product transaction:</b>
-  <%= @transaction.product_transaction_id %>
-</p>
-
-
-<%= link_to 'Edit', edit_transaction_path(@transaction) %> |
-<%= link_to 'Back', transactions_path %>
+<div class="form-actions">
+  <%= link_to t('.back', :default => t("helpers.links.back")),
+              transactions_path, :class => 'btn'  %>
+  <%= link_to t('.edit', :default => t("helpers.links.edit")),
+              edit_transaction_path(@transaction), :class => 'btn' %>
+  <%= link_to t('.destroy', :default => t("helpers.links.destroy")),
+              transaction_path(@transaction),
+              :method => 'delete',
+              :data => { :confirm => t('.confirm', :default => t("helpers.links.confirm", :default => 'Are you sure?')) },
+              :class => 'btn btn-danger' %>
+</div>
