validation for products

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -52,6 +52,7 @@
               <li><%= link_to "Bank accounts", :bank_accounts  %></li>
               <li><%= link_to "Transactions", :transactions  %></li>
               <li><%= link_to "Refunds", :refunds  %></li>
+              <li><%= link_to "Logout", destroy_user_session_path, :method => :delete  %></li>
             </ul>
           </div><!--/.nav-collapse -->
         </div>
