--- a/app/views/products/_form.html.erb
+++ b/app/views/products/_form.html.erb
@@ -2,13 +2,13 @@
   <div class="control-group">
     <%= f.label :product_number, :class => 'control-label' %>
     <div class="controls">
-      <%= f.number_field :product_number, :class => 'number_field' %>
+      <%= f.text_field :product_number, :class => 'text_field' %>
     </div>
   </div>
   <div class="control-group">
     <%= f.label :product_code, :class => 'control-label' %>
     <div class="controls">
-      <%= f.number_field :product_code, :class => 'number_field' %>
+      <%= f.text_field :product_code, :class => 'text_field' %>
     </div>
   </div>
   <div class="control-group">
@@ -20,7 +20,8 @@
   <div class="control-group">
     <%= f.label :product_type, :class => 'control-label' %>
     <div class="controls">
-      <%= f.check_box :product_type, :class => 'check_box' %>
+      <%= f.select  :product_type, options_for_select([["Select One", ""], "Labour", "With Material"]), :class => 'control-label'  %>
+
     </div>
   </div>
   <div class="control-group">
