validation added to all feild

--- a/app/views/bank_transactions/_form.html.erb
+++ b/app/views/bank_transactions/_form.html.erb
@@ -8,13 +8,13 @@
   <div class="control-group">
     <%= f.label :micor_code, :class => 'control-label' %>
     <div class="controls">
-      <%= f.number_field :micor_code, :class => 'number_field' %>
+      <%= f.text_field :micor_code, :class => 'number_field' %>
     </div>
   </div>
   <div class="control-group">
     <%= f.label :bank_account_id, :class => 'control-label' %>
     <div class="controls">
-      <%= f.number_field :bank_account_id, :class => 'number_field' %>
+      <%= f.text_field :bank_account_id, :class => 'number_field' %>
     </div>
   </div>
 
