--- a/app/views/bank_accounts/_form.html.erb
+++ b/app/views/bank_accounts/_form.html.erb
@@ -20,25 +20,25 @@
   <div class="control-group">
     <%= f.label :ifsc_code, :class => 'control-label' %>
     <div class="controls">
-      <%= f.number_field :ifsc_code, :class => 'number_field' %>
+      <%= f.text_field :ifsc_code, :class => 'number_field' %>
     </div>
   </div>
   <div class="control-group">
     <%= f.label :contact_number, :class => 'control-label' %>
     <div class="controls">
-      <%= f.number_field :contact_number, :class => 'number_field' %>
+      <%= f.text_field :contact_number, :class => 'number_field' %>
     </div>
   </div>
   <div class="control-group">
     <%= f.label :branch_manager_contact_no, :class => 'control-label' %>
     <div class="controls">
-      <%= f.number_field :branch_manager_contact_no, :class => 'number_field' %>
+      <%= f.text_field :branch_manager_contact_no, :class => 'number_field' %>
     </div>
   </div>
   <div class="control-group">
     <%= f.label :balance, :class => 'control-label' %>
     <div class="controls">
-      <%= f.number_field :balance, :class => 'number_field' %>
+      <%= f.text_field :balance, :class => 'number_field' %>
     </div>
   </div>
 
