--- a/app/views/orders/_form.html.erb
+++ b/app/views/orders/_form.html.erb
@@ -8,19 +8,19 @@
   <div class="control-group">
     <%= f.label :product_id, :class => 'control-label' %>
     <div class="controls">
-      <%= f.number_field :product_id, :class => 'number_field' %>
+      <%= f.text_field :product_id, :class => 'number_field' %>
     </div>
   </div>
   <div class="control-group">
     <%= f.label :quantity, :class => 'control-label' %>
     <div class="controls">
-      <%= f.number_field :quantity, :class => 'number_field' %>
+      <%= f.text_field :quantity, :class => 'number_field' %>
     </div>
   </div>
   <div class="control-group">
     <%= f.label :cheque_id, :class => 'control-label' %>
     <div class="controls">
-      <%= f.number_field :cheque_id, :class => 'number_field' %>
+      <%= f.text_field :cheque_id, :class => 'number_field' %>
     </div>
   </div>
 
