--- a/app/views/refunds/_form.html.erb
+++ b/app/views/refunds/_form.html.erb
@@ -14,7 +14,7 @@
   <div class="control-group">
     <%= f.label :quantity, :class => 'control-label' %>
     <div class="controls">
-      <%= f.number_field :quantity, :class => 'number_field' %>
+      <%= f.text_field :quantity, :class => 'number_field' %>
     </div>
   </div>
 
