--- a/app/views/bank_transactions/index.html.erb
+++ b/app/views/bank_transactions/index.html.erb
@@ -17,7 +17,7 @@
     <% @bank_transactions.each do |bank_transaction| %>
       <tr>
         <td><%= link_to bank_transaction.id, bank_transaction_path(bank_transaction) %></td>
-        <td><%= bank_transaction.type %></td>
+        <td><%= bank_transaction.transaction_type %></td>
         <td><%= bank_transaction.micor_code %></td>
         <td><%= bank_transaction.bank_account_id %></td>
         <td><%=l bank_transaction.created_at %></td>
