--- a/app/views/bank_transactions/show.html.erb
+++ b/app/views/bank_transactions/show.html.erb
@@ -5,7 +5,7 @@
 
 <dl class="dl-horizontal">
   <dt><strong><%= model_class.human_attribute_name(:type) %>:</strong></dt>
-  <dd><%= @bank_transaction.type %></dd>
+  <dd><%= @bank_transaction.transaction_type %></dd>
   <dt><strong><%= model_class.human_attribute_name(:micor_code) %>:</strong></dt>
   <dd><%= @bank_transaction.micor_code %></dd>
   <dt><strong><%= model_class.human_attribute_name(:bank_account_id) %>:</strong></dt>
