product_name fetch in new order form

--- a/app/views/orders/show.html.erb
+++ b/app/views/orders/show.html.erb
@@ -6,12 +6,11 @@
 <dl class="dl-horizontal">
   <dt><strong><%= model_class.human_attribute_name(:date) %>:</strong></dt>
   <dd><%= @order.date %></dd>
-  <dt><strong><%= model_class.human_attribute_name(:product_id) %>:</strong></dt>
-  <dd><%= @order.product_id %></dd>
+  <dt><strong><%= model_class.human_attribute_name(:product_name) %>:</strong></dt>
+  <dd><%= @order.product_name %></dd>
   <dt><strong><%= model_class.human_attribute_name(:quantity) %>:</strong></dt>
   <dd><%= @order.quantity %></dd>
-  <dt><strong><%= model_class.human_attribute_name(:cheque_id) %>:</strong></dt>
-  <dd><%= @order.cheque_id %></dd>
+
 </dl>
 
 <div class="form-actions">
