--- a/app/views/orders/_form.html.erb
+++ b/app/views/orders/_form.html.erb
@@ -6,10 +6,10 @@
     </div>
   </div>
   <div class="control-group">
-    <%= f.label :product_id, :class => 'control-label' %>
+    <%= f.label :product_name, :class => 'control-label' %>
     <div class="controls">
 
-      <%= f.select :product_id, options_for_select(@product.map{|d|[d.product_name, d.id] }),{ :include_blank => true }, :class => 'number_field' %>
+      <%= f.select :product_name, options_for_select(@product.map{|d|[d.product_name, d.product_name] }),{ :include_blank => true }, :class => 'number_field' %>
     </div>
   </div>
   <div class="control-group">
@@ -18,12 +18,7 @@
       <%= f.text_field :quantity, :class => 'number_field' %>
     </div>
   </div>
-  <div class="control-group">
-    <%= f.label :cheque_id, :class => 'control-label' %>
-    <div class="controls">
-      <%= f.text_field :cheque_id, :class => 'number_field' %>
-    </div>
-  </div>
+
 
   <div class="form-actions">
     <%= f.submit nil, :class => 'btn btn-primary' %>
