--- a/app/views/orders/index.html.erb
+++ b/app/views/orders/index.html.erb
@@ -7,9 +7,9 @@
     <tr>
       <th><%= model_class.human_attribute_name(:id) %></th>
       <th><%= model_class.human_attribute_name(:date) %></th>
-      <th><%= model_class.human_attribute_name(:product_id) %></th>
+      <th><%= model_class.human_attribute_name(:product_name) %></th>
       <th><%= model_class.human_attribute_name(:quantity) %></th>
-      <th><%= model_class.human_attribute_name(:cheque_id) %></th>
+
       <th><%= model_class.human_attribute_name(:created_at) %></th>
       <th><%=t '.actions', :default => t("helpers.actions") %></th>
     </tr>
@@ -19,9 +19,9 @@
       <tr>
         <td><%= link_to order.id, order_path(order) %></td>
         <td><%= order.date %></td>
-        <td><%= order.product_id %></td>
+        <td><%= order.product_name %></td>
         <td><%= order.quantity %></td>
-        <td><%= order.cheque_id %></td>
+
         <td><%=l order.created_at %></td>
         <td>
           <%= link_to t('.edit', :default => t("helpers.links.edit")),
