--- a/app/views/orders/show.html.erb
+++ b/app/views/orders/show.html.erb
@@ -4,6 +4,8 @@
 </div>
 
 <dl class="dl-horizontal">
+  <dt><strong><%= model_class.human_attribute_name(:PO_number) %>:</strong></dt>
+  <dd><%= @order.PO_number %></dd>
   <dt><strong><%= model_class.human_attribute_name(:date) %>:</strong></dt>
   <dd><%= @order.date %></dd>
   <dt><strong><%= model_class.human_attribute_name(:product_name) %>:</strong></dt>
