--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -16,6 +16,7 @@
 <table class="table table-striped">
   <thead>
     <tr>
+      <th><%= model_class.human_attribute_name(:id) %></th>
       <th><%= model_class.human_attribute_name(:product_number) %></th>
       <th><%= model_class.human_attribute_name(:product_code) %></th>
       <th><%= model_class.human_attribute_name(:product_name) %></th>
@@ -29,6 +30,7 @@
 
     <% @products.each do |product| %>
       <tr>
+        <td><%= product.id %></td>
         <td><%= product.product_number %></td>
         <td><%= product.product_code %></td>
         <td><%= product.product_name %></td>
