--- a/app/views/bank_transactions/_form.html.erb
+++ b/app/views/bank_transactions/_form.html.erb
@@ -2,7 +2,7 @@
   <div class="control-group">
     <%= f.label :type, :class => 'control-label' %>
     <div class="controls">
-      <%= f.text_field :transaction_type, :class => 'text_field' %>
+      <%= f.select :transaction_type, options_for_select([["Select one" , ""], "Cash", "Cheque" ]), :class => 'control-label' %>
     </div>
   </div>
   <div class="control-group">
