--- a/app/views/orders/show.html.erb
+++ b/app/views/orders/show.html.erb
@@ -6,7 +6,7 @@
 <dl class="dl-horizontal">
   <dt><strong><%= model_class.human_attribute_name(:PO_number) %>:</strong></dt>
   <dd><%= @order.PO_number %></dd>
-  <dt><strong><%= model_class.human_attribute_name(:date) %>:</strong></dt>
+  <dt><strong><%= model_class.human_attribute_name(:date, :order => [:day, :month, :year]) %>:</strong></dt>
   <dd><%= @order.date %></dd>
   <dt><strong><%= model_class.human_attribute_name(:product_name) %>:</strong></dt>
   <dd><%= @order.product_name %></dd>
