--- a/app/views/tax_invoices/index.html.erb
+++ b/app/views/tax_invoices/index.html.erb
@@ -7,8 +7,8 @@
     <tr>
       <th><%= model_class.human_attribute_name(:id) %></th>
       <th><%= model_class.human_attribute_name(:invoice_number) %></th>
-      <th><%= model_class.human_attribute_name(:invoice_date) %></th>
-      <th><%= model_class.human_attribute_name(:due_date) %></th>
+      <th><%= model_class.human_attribute_name(:invoice_date, :order => [:day, :month, :year]) %></th>
+      <th><%= model_class.human_attribute_name(:due_date, :order => [:day, :month, :year]) %></th>
       <th><%= model_class.human_attribute_name(:product_name) %></th>
       <th><%= model_class.human_attribute_name(:invoice_type) %></th>
       <th><%= model_class.human_attribute_name(:labour_charges) %></th>
