--- a/app/views/tax_invoices/show.html.erb
+++ b/app/views/tax_invoices/show.html.erb
@@ -6,9 +6,9 @@
 <dl class="dl-horizontal">
   <dt><strong><%= model_class.human_attribute_name(:invoice_number) %>:</strong></dt>
   <dd><%= @tax_invoice.invoice_number %></dd>
-  <dt><strong><%= model_class.human_attribute_name(:invoice_date) %>:</strong></dt>
+  <dt><strong><%= model_class.human_attribute_name(:invoice_date, :order => [:day, :month, :year],) %>:</strong></dt>
   <dd><%= @tax_invoice.invoice_date %></dd>
-  <dt><strong><%= model_class.human_attribute_name(:due_date) %>:</strong></dt>
+  <dt><strong><%= model_class.human_attribute_name(:due_date, :order => [:day, :month, :year],) %>:</strong></dt>
   <dd><%= @tax_invoice.due_date %></dd>
   <dt><strong><%= model_class.human_attribute_name(:product_name) %>:</strong></dt>
   <dd><%= @tax_invoice.product_name %></dd>
