up to invoice half

--- a/app/views/products/_form.html.erb
+++ b/app/views/products/_form.html.erb
@@ -20,7 +20,7 @@
   <div class="control-group">
     <%= f.label :product_type, :class => 'control-label' %>
     <div class="controls">
-      <%= f.select  :product_type, options_for_select([["Select One", ""], "Labour", "With Material"]), :class => 'control-label'  %>
+      <%= f.select  :product_type, options_for_select([["Select One", ""], "Labour Charges Only", "With Material"]), :class => 'control-label'  %>
 
     </div>
   </div>
