--- a/app/views/tax_invoices/_form.html.erb
+++ b/app/views/tax_invoices/_form.html.erb
@@ -1,8 +1,14 @@
 <%= form_for @tax_invoice, :html => { :class => 'form-horizontal' } do |f| %>
+    <div class="control-group">
+      <%= f.label :PO_number, :class => 'control-label' %>
+      <div class="controls">
+        <%= f.select :PO_number,options_for_select(@orders.map{|d| [d.PO_number, d.PO_number]}),{:include_blank => true}, :class => 'number_field' %>
+      </div>
+    </div>
   <div class="control-group">
     <%= f.label :invoice_number, :class => 'control-label' %>
     <div class="controls">
-      <%= f.number_field :invoice_number, :class => 'number_field' %>
+      <%= f.text_field :invoice_number, :class => 'number_field' %>
     </div>
   </div>
   <div class="control-group">
@@ -20,13 +26,13 @@
   <div class="control-group">
     <%= f.label :product_name, :class => 'control-label' %>
     <div class="controls">
-      <%= f.text_field :product_name, :class => 'text_field' %>
+      <%= f.select :product_name, options_for_select(@products.map{|d| [d.product_name, d.product_name]}),{ :include_blank => true}, :class => 'text_field' %>
     </div>
   </div>
   <div class="control-group">
     <%= f.label :invoice_type, :class => 'control-label' %>
     <div class="controls">
-      <%= f.text_field :invoice_type, :class => 'text_field' %>
+      <%= f.select :invoice_type, options_for_select([["Select One", ""], "Labour Charges Only", "With Material"]), :class => 'text_field' %>
     </div>
   </div>
   <div class="control-group">
@@ -35,6 +41,12 @@
       <%= f.text_field :labour_charges, :class => 'text_field' %>
     </div>
   </div>
+   <div class="control-group">
+      <%= f.label :quantity, :class => 'control-label' %>
+      <div class="controls">
+        <%= f.text_field :quantity, :class => 'text_field' %>
+      </div>
+   </div>
   <div class="control-group">
     <%= f.label :amount, :class => 'control-label' %>
     <div class="controls">
@@ -42,9 +54,9 @@
     </div>
   </div>
   <div class="control-group">
-    <%= f.label :total_requirement, :class => 'control-label' %>
+    <%= f.label :total_payment, :class => 'control-label' %>
     <div class="controls">
-      <%= f.number_field :total_requirement, :class => 'number_field' %>
+      <%= f.text_field :total_payment, :class => 'number_field' %>
     </div>
   </div>
 
