--- a/app/views/tax_invoices/index.html.erb
+++ b/app/views/tax_invoices/index.html.erb
@@ -6,14 +6,16 @@
   <thead>
     <tr>
       <th><%= model_class.human_attribute_name(:id) %></th>
+      <th><%= model_class.human_attribute_name(:PO_number) %></th>
       <th><%= model_class.human_attribute_name(:invoice_number) %></th>
       <th><%= model_class.human_attribute_name(:invoice_date, :order => [:day, :month, :year]) %></th>
       <th><%= model_class.human_attribute_name(:due_date, :order => [:day, :month, :year]) %></th>
       <th><%= model_class.human_attribute_name(:product_name) %></th>
       <th><%= model_class.human_attribute_name(:invoice_type) %></th>
       <th><%= model_class.human_attribute_name(:labour_charges) %></th>
+      <th><%= model_class.human_attribute_name(:quantity) %></th>
       <th><%= model_class.human_attribute_name(:amount) %></th>
-      <th><%= model_class.human_attribute_name(:total_requirement) %></th>
+      <th><%= model_class.human_attribute_name(:total_payment) %></th>
       <th><%= model_class.human_attribute_name(:created_at) %></th>
       <th><%=t '.actions', :default => t("helpers.actions") %></th>
     </tr>
@@ -22,14 +24,16 @@
     <% @tax_invoices.each do |tax_invoice| %>
       <tr>
         <td><%= link_to tax_invoice.id, tax_invoice_path(tax_invoice) %></td>
+        <td><%= tax_invoice.PO_number %></td>
         <td><%= tax_invoice.invoice_number %></td>
         <td><%= tax_invoice.invoice_date %></td>
         <td><%= tax_invoice.due_date %></td>
         <td><%= tax_invoice.product_name %></td>
         <td><%= tax_invoice.invoice_type %></td>
         <td><%= tax_invoice.labour_charges %></td>
+        <td><%= tax_invoice.quantity %></td>
         <td><%= tax_invoice.amount %></td>
-        <td><%= tax_invoice.total_requirement %></td>
+        <td><%= tax_invoice.total_payment %></td>
         <td><%=l tax_invoice.created_at %></td>
         <td>
           <%= link_to t('.edit', :default => t("helpers.links.edit")),
