--- a/app/views/tax_invoices/generate_pdf.html.erb
+++ b/app/views/tax_invoices/generate_pdf.html.erb
@@ -7,6 +7,14 @@
     <table border="1" cellpadding="0" cellspacing="0">
       <tr>
         <td>
+          <dt><strong>Product Order NO.</strong></dt>
+        </td>
+        <td>
+          <dd><%= @tax_invoice.PO_number%></dd>
+        </td>
+      </tr>
+      <tr>
+        <td>
             <dt><strong>Invoice Number:</strong></dt>
         </td>
         <td>
@@ -47,10 +55,18 @@
       </tr>
       <tr>
         <td>
-            <dt><strong>Labour Charges</strong></dt>
+          <dt><strong>Quantity</strong></dt>
         </td>
         <td>
-            <dd><%= @tax_invoice.labour_charges %></dd>
+          <dd><%= @tax_invoice.quantity %></dd>
+        </td>
+      </tr>
+      <tr>
+        <td>
+          <dt><strong>Rate</strong></dt>
+        </td>
+        <td>
+          <dd><%= @tax_invoice.rate %></dd>
         </td>
       </tr>
       <tr>
@@ -63,10 +79,18 @@
       </tr>
       <tr>
         <td>
-            <dt><strong>Total Requirement</strong></dt>
+          <dt><strong>Labour Charges</strong></dt>
         </td>
         <td>
-            <dd><%= @tax_invoice.total_requirement %></dd>
+          <dd><%= @tax_invoice.labour_charges %></dd>
+        </td>
+      </tr>
+      <tr>
+        <td>
+            <dt><strong>Total payment</strong></dt>
+        </td>
+        <td>
+            <dd><%= @tax_invoice.total_payment %></dd>
         </td>
        </tr>
     </table>
